--- a/generator-spring/pom.xml
+++ b/generator-spring/pom.xml
@@ -35,6 +35,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.6</version>
+        </dependency>
+
         <!-- druid数据库连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
